--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -468,4 +468,49 @@
 	title = {{More than a Feeling: Personality and Congressional Behavior}},
 	year = {2014}
 }
+@article{Mezquita2010,
+	abstract = {Relations between personality domains, internal drinking motives, alcohol use, and alcohol-related problems were examined. Undergraduate student drinkers (N= 521) completed the NEO-FFI, the Modified DMQ-R, a quantity/frequency measure of alcohol use, and the RAPI. A path analysis was performed to test a theoretical model of relations between these variables which specified internal drinking motives as mediators of the relations between personality domains and alcohol use/drinking consequences. Coping-depression drinking motives were predicted by Neuroticism, coping-anxiety drinking motives by Neuroticism and low Conscientiousness, and enhancement drinking motives by Extraversion and low Conscientiousness. Moreover, heavier drinking was predicted by enhancement motives, while alcohol-related problems were predicted by both coping-anxiety and coping-depression drinking motives. The results support the distinction between coping-anxiety and coping-depression drinking motives in that a different pattern of personality domains was associated with each. © 2010 Elsevier Ltd.},
+	author = {Mezquita, Laura and Stewart, Sherry H. and Ruip{\'{e}}rez, Ma {\'{A}}ngeles},
+	doi = {10.1016/j.paid.2010.03.043},
+	isbn = {0191-8869},
+	issn = {01918869},
+	journal = {Personality and Individual Differences},
+	keywords = {Drinking motives,Five-factor model,Personality},
+	mendeley-groups = {Personality},
+	number = {3},
+	pages = {240--245},
+	title = {{Big-five personality domains predict internal drinking motives in young adults}},
+	volume = {49},
+	year = {2010}
+}
+@article{Rothmann2003,
+	author = {Rothmann, S and Coetzer, E. P},
+	doi = {10.4102/sajip.v29i1.88},
+	isbn = {1744-6570},
+	issn = {2071-0763},
+	journal = {Journal of industrial psychology},
+	mendeley-groups = {Personality},
+	number = {1},
+	pages = {68--74},
+	title = {{The big five personality dimensions and job performance}},
+	volume = {29},
+	year = {2003}
+}
+@article{Malouff2010,
+	abstract = {A meta-analysis that included 19 samples with a total of 3848 participants showed that scores on four of the Five-Factor Model personality factors correlated significantly with level of relationship satisfaction by intimate heterosexual partners. The four personality characteristics were low neuroticism, high agreeableness, high conscientiousness, and high extraversion. The associations between an individual's personality characteristics and the relationship satisfaction of the individual's intimate partner did not vary significantly from men to women or from married to unmarried individuals. The results of the meta-analysis provide support for the utility of the Five-Factor Model of personality in understanding an important realm of life, intimate relationships. ?? 2009 Elsevier Inc.},
+	author = {Malouff, John M. and Thorsteinsson, Einar B. and Schutte, Nicola S. and Bhullar, Navjot and Rooke, Sally E.},
+	doi = {10.1016/j.jrp.2009.09.004},
+	isbn = {0092-6566},
+	issn = {00926566},
+	journal = {Journal of Research in Personality},
+	keywords = {Big five,Five-Factor Model,Marital satisfaction,Personality,Relationship satisfaction meta-analysis},
+	mendeley-groups = {Personality},
+	number = {1},
+	pages = {124--127},
+	publisher = {Elsevier Inc.},
+	title = {{The Five-Factor Model of personality and relationship satisfaction of intimate partners: A meta-analysis}},
+	url = {http://dx.doi.org/10.1016/j.jrp.2009.09.004},
+	volume = {44},
+	year = {2010}
+}
 
